--- a/package.json
+++ b/package.json
@@ -20,17 +20,24 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^3.5.2",
     "@google-cloud/storage": "^6.9.4",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
+    "@nestjs/throttler": "^4.0.0",
     "@tfarras/nestjs-firebase-admin": "^2.0.1",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose-sequence": "^3.0.7",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.0",
     "cache-manager-redis-store": "^3.0.1",
@@ -39,10 +46,14 @@
     "class-validator": "^0.14.0",
     "eslint-plugin-sort-class-members": "^1.16.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "event-stream": "^4.0.1",
+    "express": "^4.18.2",
     "firebase": "^9.18.0",
-    "firebase-admin": "^11.5.0",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
     "moment": "^2.29.4",
     "mongodb": "^5.1.0",
+    "mongodb-realm-cli": "^2.6.2",
     "mongoose": "^6.10.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-autopopulate": "^1.0.0",
@@ -56,7 +67,9 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "uuid-v4": "^0.1.0"
+    "sharp": "^0.32.0",
+    "uuid-v4": "^0.1.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.2/xlsx-0.19.2.tgz"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -64,6 +77,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/mongoose-aggregate-paginate-v2": "^1.0.6",
@@ -104,5 +118,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "engines": {
+    "node": "16"
+  },
+  "main": "dist/index.js"
 }
