--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
+    "node": "^16.20.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
