--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,16 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=test0
-sonar.token=sqp_a612bd804e77c33d20e6e4c4b82e54e80cf05baa
 # --- optional properties ---
 
 # defaults to project keyz
-sonar.projectName=test
+# sonar.projectName=test0
 # defaults to 'not provided'
 #sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Defaults to .
-sonar.sources=.
+# sonar.sources=.
  
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
-sonar.web.host=sonarqube
-sonar.host.url=http://localhost:9000
+# sonar.sourceEncoding=UTF-8
+# sonar.web.host=sonarqube
+# sonar.host.url=http://localhost:9000
